# nanoreddit_api_testing

./: .env_sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
bugs/: 001-Ошибка в документации Get all information about post.txt  002-Ошибка в документации Comment New comment to post.txt  003-Ошибка в документации username.txt  004-Ошибка в документации comments-controller.txt  005-Недостаточная информативность метода.txt  005-Фичреквест недостаточная информативность метода.txt  006-Некорректное использование HTTP-метода.txt  006-Ошибка некорректное использование HTTP-метода.txt  007-Неккоректный формат ответа при ошибке Registration error.txt  007-Ошибка некорректный формат ответа при ошибке Registration error.txt  008-Неккоректный формат ответа при ошибке  Post information error.txt  008-Ошибка некорректный формат ответа при ошибке Post information error.txt
src/clients/http_client/: admin_controller.py  auth_controller.py  base_client.py  comments_controller.py  post_controller.py  (+1 more)
src/config/: api_endpoints.py  db_config.py
src/models/: api_model.py  sqlalchemy_model.py
src/utils/: custom_logger.py
tests/: conftest.py  conftest_users.py  test_admin_operations_negative.py  test_admin_operations_positive.py  test_auth_operations_negative.py  test_auth_operations_positive.py  test_comments_operations_negative.py  test_comments_operations_positive.py  test_posts_operations_negative.py  test_posts_operations_positive.py  test_profile_negative.py  test_profile_positive.py
tests/steps/: post_steps.py
(+2 files in other folders)
